--- a/views/poke_edit.ejs
+++ b/views/poke_edit.ejs
@@ -27,6 +27,9 @@ h1{
   </head>
   <body>
     <h1>Edit Your Pokemon</h1>
+
+//This allows you to edit your pokemon using the form and form manipulation
+
     <form action="/pokedex/<%=index%>?_method=PUT" method="POST">
       Name: <input type="text" name="name" value="<%=pokemon.name%>"/><br/>
       HP: <input type="text" name="hp" value="<%=pokemon.stats.hp%>"/><br/>
