updated the comments

--- a/views/poke_index.ejs
+++ b/views/poke_index.ejs
@@ -81,6 +81,7 @@ li {
     </ul> <br/>
 </div>
 
+//Hyper link takes you to a page to create a new pokemon
     <a href="/pokedex/new">Make a new pokemon</a>
 
   </body>
