--- a/views/poke_show.ejs
+++ b/views/poke_show.ejs
@@ -37,11 +37,15 @@ img {
   </head>
   <body>
     <div class="container">
+
+//This creates the selected pokemon inside of a div class of container
+
     <h1><%=pokedex.name%></h1> <br/>
 
 
 <div class="traits">
 
+//This div shows off the particular pokemon traits. 
 
     <h3>HP</h3>
 
