--- a/views/poke_new.ejs
+++ b/views/poke_new.ejs
@@ -25,6 +25,9 @@ h1{
   </head>
   <body>
     <h1>New Pokemon</h1>
+
+//Filling out this Form allows you to create a new pokemon
+
     <form action="/pokedex" method="POST">
       Name: <input type="text" name="name" /><br/>
       HP: <input type="text" name="hp" /><br/>
